ok i'm doing other stuff now I plomish

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,6 +30,10 @@ Currently, the variables of the data-set are;
 | continent               | continent where country is located (Note: 6 continents) |
 | anthem                  | lyrics of national anthem                               |
 
+## Some Potentially useful sites
+
+  - [Wikipedia List of National Anthems](https://en.wikipedia.org/wiki/List_of_national_anthems)
+
 
 # To-Do
 
